# no-name-yet

./: .dockerignore  .gitignore  .vscodeignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  SUBMISSION_READY.md  ci-trigger.txt  compose.yaml  package.json  pyproject.toml  sergeant.py  vscode-extension.js
.github/: copilot-instructions.md
battle-tests/: README.md  django-19610.json  pallets-flask-5812.json  pallets-flask-5812.md  psf-requests-7502.json  psf-requests-7502.md
deploy/: standalone.env.example
docs/: 00-product-brief.md  01-research-sources.md  03-comparison-matrix.md  04-architecture.md  04-command-center-review-closure.md  05-security-model.md  07-identity-notes.md  08-roadmap.md  09-repository-intelligence-engine.md  10-review-memory.md  11-evidence-providers.md  12-external-review-learning-loop.md  13-verdict-engine.md  14-diff-review-mode.md  15-external-review-ingestion.md  16-memory-write-loop.md  17-github-pr-comment-collector.md  18-review-batch-workflow.md  20-clean-clone-proof.md  22-final-proof-gate.md  22-semantic-open-model-review.md  23-end-to-end-proof-suite.md  23-main-review-semantic-gate-assurance.md  24-coordinate-0.4-release-assurance.md  24-review-intelligence-phase.md  25-cloudflare-workers-ai.md  26-cloudflare-connector-assurance.md  26-name-and-finish.md  27-cloudflare-live-certification.md  27-tier-1-capability-engine.md  28-cloudflare-native-fallback.md  28-tier-2-review-intelligence.md  29-app-bridge.md  29-cpl-finding-adjudication.md  30-tier-3-evidence-consensus.md  31-tier-4-verified-learning-loop.md  32-tier-5-graduation-benchmark.md  33-tier-6-squad-intelligence.md  34-cpl-officer-amplification.md  34-public-boundary-and-live-fetch.md  (+27 more)
main_review/: __init__.py  actions_evidence.py  adaptive_curriculum.py  app_bridge.py  battle_compare.py  boundary.py  capability_engine.py  capability_policy.py  cli.py  cloudflare_cli.py  cloudflare_gateway.py  cloudflare_incremental_certification.py  cloudflare_models.py  cloudflare_scout_qualification.py  cloudflare_usage.py  consensus.py  cpl_campaign.py  cpl_council.py  cpl_council_prompt.py  cpl_experience.py  cpl_noise.py  cpl_reasoning.py  cpl_reliability.py  cpl_runtime.py  cross_repo_learning.py  diff_policy.py  diff_review.py  evidence.py  evidence_consensus.py  external_static_review.py  final_proof.py  github_bot.py  github_collector.py  github_diff_fetch.py  github_live_fetch.py  graduation.py  hardened_mission.py  ide_bench.py  languages.py  learning_loop.py  (+68 more)
ops/: certified-roster-benchmark-summary.json  certified-roster-benchmark.json  cpl-quality-benchmark-summary.json  cpl-quality-benchmark.json  mission-certified-observed.json
resources/: sergeant-command-center-v2-responsive.css  sergeant-command-center-v2.css  sergeant-command-center-v2.html  sergeant-command-center-v2.js  sergeant-standalone-host.js
review-training/: unseen-development-set-1.json  unseen-holdout-set-1.json  unseen-validation-set-1.json  unseen-validation-set-2.json  unseen-validation-set-3.json  unseen-validation-set-4.json  unseen-validation-set-5.json
scripts/: apply_last_coderabbit_fix.py  apply_pr103_rate_limit_fix.py  apply_pr103_verified_review_fixes.py  apply_pr103_workflow_contract_fix.py  apply_review_finish_patch.py  apply_workspace_ready_command_fabric.py  apply_workspace_rematch_round2_fixes.py  build-command-center-preview.js  classify_cross_repo_learning_signal.py  collect_github_learning_candidates.py  construct_full_council_compat.py  export_learning_proposals.py  prove-standalone-service.py  run_controlled_self_learning.py  run_static_training_set.py  select_opaque_transfer_candidates_v8.py  setup_hermes_learning_profiles.sh  validate_actions_evidence.py
tests/: command-center-visual.spec.js  conftest.py  test_actions_evidence.py  test_adaptive_curriculum.py  test_agent_working_memory.py  test_app_bridge.py  test_battle_compare.py  test_battle_tests.py  test_capability_engine.py  test_capability_policy.py  test_cloudflare_certification_semantics.py  test_cloudflare_certification_workflow_contract.py  test_cloudflare_full_roster_qualification.py  test_cloudflare_gateway.py  test_cloudflare_incremental_certification.py  (+119 more)
(+189 files in other folders)
