[project]
name = "sergeant-reviewer"
version = "0.2.2"
description = "Sergeant open-source engineering review system."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
sergeant = "main_review.cli:main"
main-review = "main_review.cli:main"

[tool.setuptools]
packages = ["main_review"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
