[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sergeant-reviewer"
version = "0.3.0"
description = "Sergeant open-source engineering review system."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "THETECHGUY DIGITAL SOLUTIONS" }
]
keywords = ["engineering-review", "repository-review", "static-analysis", "developer-tools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/jaydumisuni/Sergeant"
Repository = "https://github.com/jaydumisuni/Sergeant"
Issues = "https://github.com/jaydumisuni/Sergeant/issues"

[project.scripts]
sergeant = "main_review.cli:main"
main-review = "main_review.cli:main"

[tool.setuptools]
packages = ["main_review"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
