[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sergeant-reviewer"
version = "0.4.0"
description = "Sergeant open-source engineering review system."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "THETECHGUY DIGITAL SOLUTIONS" }
]
keywords = ["engineering-review", "repository-review", "static-analysis", "semantic-review", "developer-tools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/jaydumisuni/Sergeant"
Repository = "https://github.com/jaydumisuni/Sergeant"
Issues = "https://github.com/jaydumisuni/Sergeant/issues"

[project.scripts]
sergeant = "main_review.cli:main"
main-review = "main_review.cli:main"
sergeant-serve = "main_review.standalone:main"
sergeant-bench = "main_review.review_benchmark:main"

[tool.setuptools]
packages = ["main_review"]

[tool.setuptools.data-files]
"share/sergeant/resources" = [
  "resources/sergeant-command-center-v2.html",
  "resources/sergeant-command-center-v2.css",
  "resources/sergeant-command-center-v2-responsive.css",
  "resources/sergeant-command-center-v2.js",
  "resources/sergeant-standalone-host.js",
]
"share/sergeant/review-benchmarks/blind" = [
  "review-benchmarks/blind/api-contract-without-proof.json",
  "review-benchmarks/blind/clean-focused-change.json",
  "review-benchmarks/blind/command-injection.json",
  "review-benchmarks/blind/nested-loop-cost.json",
  "review-benchmarks/blind/path-traversal.json",
  "review-benchmarks/blind/privileged-route-without-authorization.json",
  "review-benchmarks/blind/safe-parameterized-query.json",
  "review-benchmarks/blind/shared-counter-race.json",
  "review-benchmarks/blind/ui-backend-boundary.json",
  "review-benchmarks/blind/unsafe-sql-data-flow.json",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
